--- a/alembic.ini
+++ b/alembic.ini
@@ -85,7 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 
-sqlalchemy.url = postgresql+psycopg2://postgres:62625054@localhost:5432/NNZOOCONNECT
+sqlalchemy.url = postgresql+psycopg2://postgres:62625054@localhost:5432/ABZOOCONNECT
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
